add main content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<p>Chieko Yamamoto</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Tokyo Japan Tour</title>
+</head>
+<body>
+	<header>
+		<h1>TOKYO JAPAN TOUR</h1>
+		<nav>
+			<a href="#sightseeing"><li>Sightseeing</li></a>
+			<a href="#food"><li>Food&Drink</li></a>
+			<a href="#hotel"><li>Hotel</li></a>
+		</nav>
+		<img src="./images/header.jpg">
+	</header>
+	<main>
+		<article>
+			<h1>Are you interested in visiting Japan?</h1>
+			<p>Hi, My name is Chieko. I'm from Japan. If you like to have an unique experience in new culture and poeple, highly recommended to visit Japan! I introduce and recommend my favorite things in Tokyo Japan. </p>
+		</article>
+
+		<article>
+			<h2 id="sightseeing">SightSeeing</h2>
+			<ol>
+				<li>TOKYO SKYTREE</li>
+				<p><strong>Tokyo Skytree</strong> is the world's tallest broadcasting tower! You can get a view of Tokyo from there.</p>
+				<img src="./images/sightseeing_skytree.jpg" alt="Skytree">
+
+				<li>SENSO-JI</li>
+				<p><strong>Senso-ji</strong> is an ancient Buddhist temple located in Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one of its most significant. You can ride a <em>Jinrikisha</em>, a small, two-wheeled, cart-like passenger vehicle with a retractable roof,pulled by one or more person, and they will take you the major sightseeing spots aroung Senso-ji.</p>
+				<img src="./images/sightseeing_sensoji.jpg" alt="Senso-ji">
+
+				<li>ROBOT RESTAURANT</li>
+				<p>Get ready for a night of eye-popping entertainment like nothing you've seen at the Robot Restaurant, where bright lights, techno music, dinosaurs, and dancers combine with robots for a sensory spectacle in the heart of the Kabukicho red-light district.</p>
+				<img src="./images/sightseeing_robot.jpg" alt="robot restautant">
+			</ol>		
+		</article>
+
+		<article>
+			<h2 id="food">Food&Drink</h2>
+			<ol>
+				<li>RAMEN</li>
+				<p>You cannot go to Japan without eating <strong>Ramen</strong>. Think of ramen as the pizza of Japan: a quick, fortifying meal, which may involve standing in line and is then quickly devoured. I'd recommend <a href="https://en.wikipedia.org/wiki/Ichiran" title="Ichiran" target="_blank">Ichiran</a> or <a href="https://en.wikipedia.org/wiki/Ippudo" title="Ippudo" target="_blank">Ippudo</a> as you cannot go wrong with these ramen chains.</p>
+				<img src="./images/food_ramen.jpg" alt="Ramen" target="_blank">
+
+				<li>SUSHI</li>
+				<p>Have you had a <strong>real Sushi</strong> before? Japanese use very fresh fish and tasty rice. I recommend to go to Tsukiji to get fresh row fish (sasimi) or Sushi. Kaiten Sushi (rotating sushi restautant) is also great place to have enjoy Sushi with unique Japanese culture.</p>
+				<img src="./images/food_sushi.jpg" alt='Sushi'>
+
+				<li>TEMPRA</li>
+				<p><strong>Tempura</strong> is seafood or vegetables that have been covered in batter and fried in oil. We eat tempura with by dipping into tempura sauce or with maccha salt.</p>
+				<img src="./images/food_tempra.jpg" alt='Tempra'>
+			</ol>	
+			
+		</article>
+		<article>
+			<h2 id="hotel">Hotel</h2>
+			<ol>
+				<li>TOKYO STATION HOTEL</li>
+				<p>The Tokyo Station Hotel is directly connected to the JR Tokyo Station Marunouchi, for convenient travel throughout Japan. The hotel is also located just 30 minutes from the Haneda Airport Station by Tokyo Monorail; and 60 minutes from the JR Narita Airport Station by Narita Express.</p>
+				<img src="./images/hotel_station.jpg" alt="TOKYO STATION HOTEL">
+
+
+				<li>HOSHINOYA HOTEL</li>
+				<p>Extreme attention to details, from design to service, this is a great choice for someone looking to relax and for some visual and sensorial inspiration. Also, greatly designed onsen (part of it is open-air) located on the 17th floor.</p>
+				<img src="./images/hotel_hoshinoya.jpg" alt="HOSHINOYA HOTEL">
+
+				<li>IMPERIAL HOTEL</li>
+				<p>Founded in 1890, has welcomed celebrities by offering impeccable Japanese hospitality. </p>
+				<img src="./images/hotel_imperial.jpg" alt="IMPERIAL HOTEL">
+			</ol>
+			
+		</article>
+
+	</main>
+
+	<footer>
+	</footer>
+</body>
+</html>
