Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
 		<article>
 			<h2 id="sightseeing">SightSeeing</h2>
 			<ol>
-				<li>TOKYO SKYTREE</li>
+				<a href="http://www.tokyo-skytree.jp/en/" title="official web-site" target="_blank">
+					<li>TOKYO SKYTREE</li>
+				</a>
 				<p><strong>Tokyo Skytree</strong> is the world's tallest broadcasting tower! You can get a view of Tokyo from there.</p>
 				<img src="./images/sightseeing_skytree.jpg" alt="Skytree">
 
-				<li>SENSO-JI</li>
+				<a href="https://www.gotokyo.org/en/kanko/taito/spot/40714.html" title="Tokyo official guide" target="_blank">
+					<li>SENSO-JI</li>
+				</a>
 				<p><strong>Senso-ji</strong> is an ancient Buddhist temple located in Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one of its most significant. You can ride a <em>Jinrikisha</em>, a small, two-wheeled, cart-like passenger vehicle with a retractable roof,pulled by one or more person, and they will take you the major sightseeing spots aroung Senso-ji.</p>
 				<img src="./images/sightseeing_sensoji.jpg" alt="Senso-ji">
 
-				<li>ROBOT RESTAURANT</li>
+				<a href="http://www.shinjuku-robot.com/pc/?lng=en" title="official web-site" target="_blank">
+					<li>ROBOT RESTAURANT</li>
+				</a>
 				<p>Get ready for a night of eye-popping entertainment like nothing you've seen at the Robot Restaurant, where bright lights, techno music, dinosaurs, and dancers combine with robots for a sensory spectacle in the heart of the Kabukicho red-light district.</p>
 				<img src="./images/sightseeing_robot.jpg" alt="robot restautant">
 			</ol>		
@@ -56,25 +62,29 @@
 		<article>
 			<h2 id="hotel">Hotel</h2>
 			<ol>
-				<li>TOKYO STATION HOTEL</li>
-				<p>The Tokyo Station Hotel is directly connected to the JR Tokyo Station Marunouchi, for convenient travel throughout Japan. The hotel is also located just 30 minutes from the Haneda Airport Station by Tokyo Monorail; and 60 minutes from the JR Narita Airport Station by Narita Express.</p>
+				<a href="https://www.thetokyostationhotel.jp/en" title="official web-site" target="_blank">
+					<li>TOKYO STATION HOTEL</li>
+				</a>
+				<p><strong>Tokyo Station Hotel</strong> is directly connected to the JR Tokyo Station Marunouchi, for convenient travel throughout Japan. The hotel is also located just 30 minutes from the Haneda Airport Station by Tokyo Monorail; and 60 minutes from the JR Narita Airport Station by Narita Express.</p>
 				<img src="./images/hotel_station.jpg" alt="TOKYO STATION HOTEL">
 
-
-				<li>HOSHINOYA HOTEL</li>
-				<p>Extreme attention to details, from design to service, this is a great choice for someone looking to relax and for some visual and sensorial inspiration. Also, greatly designed onsen (part of it is open-air) located on the 17th floor.</p>
+				<a href="https://hoshinoya.com/tokyo/en/" title="official web-site" target="_blank">
+					<li>HOSHINOYA HOTEL</li>
+				</a>
+				<p>Extreme attention to details, from design to service, this is a great choice for someone looking to relax and for some visual and sensorial inspiration. Also, greatly designed onsen (part of it is open-air) located on the 17th floor. <strong>Hoshinoya hotel</strong> is great choice!</p>
 				<img src="./images/hotel_hoshinoya.jpg" alt="HOSHINOYA HOTEL">
 
-				<li>IMPERIAL HOTEL</li>
-				<p>Founded in 1890, has welcomed celebrities by offering impeccable Japanese hospitality. </p>
+				<a href="https://www.imperialhotel.co.jp/e/tokyo/" title="official web-site" target="_blank">
+					<li>IMPERIAL HOTEL</li>
+				</a>
+				<p><strong>Imperial Hotel</strong> is founded in 1890, has welcomed celebrities by offering impeccable Japanese hospitality. </p>
 				<img src="./images/hotel_imperial.jpg" alt="IMPERIAL HOTEL">
 			</ol>
-			
 		</article>
-
 	</main>
 
 	<footer>
+		<p><small>Copyright&copy; 2018 @Chieko Yamamoto All Rights Reserved.</small></p>
 	</footer>
 </body>
 </html>
