create css and change html to adjust layout

--- a/index.html
+++ b/index.html
@@ -1,90 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width">
 	<title>Tokyo Japan Tour</title>
+	<link rel="stylesheet" href="./normalize.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<header>
-		<h1>TOKYO JAPAN TOUR</h1>
-		<nav>
-			<a href="#sightseeing"><li>Sightseeing</li></a>
-			<a href="#food"><li>Food&Drink</li></a>
-			<a href="#hotel"><li>Hotel</li></a>
+	<div class="header-nav-wrapper">
+		<header>
+	       TOKYO JAPAN TOUR
+	    </header>
+	    <nav>
+	    	<ul>
+	    		<li><a href="#sightseeing">Sightseeing</a></li>
+				<li><a href="#food">Food&Drink</a></li>
+				<li><a href="#hotel">Hotel</a></li>
+			</ul>
 		</nav>
-		<img src="./images/header.jpg">
-	</header>
-	<main>
-		<article>
-			<h1>Are you interested in visiting Japan?</h1>
-			<p>Hi, My name is Chieko. I'm from Japan. If you like to have an unique experience in new culture and poeple, highly recommended to visit Japan! I introduce and recommend my favorite things in Tokyo Japan. </p>
-		</article>
+    </div>
+    <div class="main-wrapper">
+    	<main>
+    		<div class="header_image">
+    			<div class="image">
+    				<img src="./images/header.jpg">
+			    </div>
+			    <div class="subtext">
+				    TOKYO JAPAN TOUR
+			    </div>
+		    </div>
+		    <article>
+		    	<h1>Are you interested in visiting Japan?</h1>
+		    	<p>Hi, My name is Chieko. I'm from Japan. If you are looking for a unique experience and to learn about a new culture, I highly recommend visiting Japan! I will recomend my favorite things to do in Tokyo Japan. </p>
+		    </article>
 
-		<article>
-			<h2 id="sightseeing">SightSeeing</h2>
-			<ol>
-				<a href="http://www.tokyo-skytree.jp/en/" title="official web-site" target="_blank">
-					<li>TOKYO SKYTREE</li>
-				</a>
-				<p><strong>Tokyo Skytree</strong> is the world's tallest broadcasting tower! You can get a view of Tokyo from there.</p>
-				<img src="./images/sightseeing_skytree.jpg" alt="Skytree">
+		    <article>
+		    	<div id="sightseeing" class="dummy"></div>
+		    	<h2>SightSeeing</h2>
+		    	<ol>
+		    		<li><a href="http://www.tokyo-skytree.jp/en/" title="official web-site" target="_blank">TOKYO SKYTREE</a></li>
+		    		<p><strong>Tokyo Skytree</strong> is the world's tallest broadcasting tower! You can get a view of Tokyo from there.</p>
+		    		<span><img src="./images/sightseeing_skytree.jpg" alt="Skytree"></span>
 
-				<a href="https://www.gotokyo.org/en/kanko/taito/spot/40714.html" title="Tokyo official guide" target="_blank">
-					<li>SENSO-JI</li>
-				</a>
-				<p><strong>Senso-ji</strong> is an ancient Buddhist temple located in Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one of its most significant. You can ride a <em>Jinrikisha</em>, a small, two-wheeled, cart-like passenger vehicle with a retractable roof,pulled by one or more person, and they will take you the major sightseeing spots aroung Senso-ji.</p>
-				<img src="./images/sightseeing_sensoji.jpg" alt="Senso-ji">
+				    <li><a href="https://www.gotokyo.org/en/kanko/taito/spot/40714.html" title="Tokyo official guide" target="_blank">SENSO-JI</a></li>
+				    <p><strong>Senso-ji</strong> is an ancient Buddhist temple located in Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one of its most significant. You can ride a <em>Jinrikisha</em>, a small, two-wheeled, cart-like passenger vehicle with a retractable roof,pulled by one or more person, and they will take you the major sightseeing spots aroung Senso-ji.</p>
+				    <span><img src="./images/sightseeing_sensoji.jpg" alt="Senso-ji"></span>
 
-				<a href="http://www.shinjuku-robot.com/pc/?lng=en" title="official web-site" target="_blank">
-					<li>ROBOT RESTAURANT</li>
-				</a>
-				<p>Get ready for a night of eye-popping entertainment like nothing you've seen at the Robot Restaurant, where bright lights, techno music, dinosaurs, and dancers combine with robots for a sensory spectacle in the heart of the Kabukicho red-light district.</p>
-				<img src="./images/sightseeing_robot.jpg" alt="robot restautant">
-			</ol>		
-		</article>
+				    <li><a href="http://www.shinjuku-robot.com/pc/?lng=en" title="official web-site" target="_blank">ROBOT RESTAURANT</a></li>
+				    <p>Get ready for a night of eye-popping entertainment like nothing you've seen at the Robot Restaurant, where bright lights, techno music, dinosaurs, and dancers combine with robots for a sensory spectacle in the heart of the Kabukicho red-light district.</p>
+				    <span><img src="./images/sightseeing_robot.jpg" alt="robot restautant"></span>
+			    </ol>		
+		    </article>
 
-		<article>
-			<h2 id="food">Food&Drink</h2>
-			<ol>
-				<li>RAMEN</li>
-				<p>You cannot go to Japan without eating <strong>Ramen</strong>. Think of ramen as the pizza of Japan: a quick, fortifying meal, which may involve standing in line and is then quickly devoured. I'd recommend <a href="https://en.wikipedia.org/wiki/Ichiran" title="Ichiran" target="_blank">Ichiran</a> or <a href="https://en.wikipedia.org/wiki/Ippudo" title="Ippudo" target="_blank">Ippudo</a> as you cannot go wrong with these ramen chains.</p>
-				<img src="./images/food_ramen.jpg" alt="Ramen" target="_blank">
+		    <article>
+		    	<div id="food" class="dummy"></div>
+			    <h2>Food&Drink</h2>
+			    <ol>
+				    <li>RAMEN</li>
+				    <p>You cannot go to Japan without eating <strong>Ramen</strong>. Think of ramen as the pizza of Japan: a quick, fortifying meal, which may involve standing in line and is then quickly devoured. I'd recommend <a href="https://en.wikipedia.org/wiki/Ichiran" title="Ichiran" target="_blank">Ichiran</a> or <a href="https://en.wikipedia.org/wiki/Ippudo" title="Ippudo" target="_blank">Ippudo</a> as you cannot go wrong with these ramen chains.</p>
+				    <span><img src="./images/food_ramen.jpg" alt="Ramen" target="_blank"></span>
 
-				<li>SUSHI</li>
-				<p>Have you had a <strong>real Sushi</strong> before? Japanese use very fresh fish and tasty rice. I recommend to go to Tsukiji to get fresh row fish (sasimi) or Sushi. Kaiten Sushi (rotating sushi restautant) is also great place to have enjoy Sushi with unique Japanese culture.</p>
-				<img src="./images/food_sushi.jpg" alt='Sushi'>
+				    <li>SUSHI</li>
+				    <p>Have you had <strong>real Sushi</strong> before? Japanese use very fresh fish with tasty rice. I recommend going to Tsukiji to get fresh raw fish (sasimi) or Sushi. Kaiten Sushi (rotating sushi restautant) is also a great place to enjoy Sushi with unique Japanese culture.</p>
+				    <span><img src="./images/food_sushi.jpg" alt='Sushi'></span>
 
-				<li>TEMPRA</li>
-				<p><strong>Tempura</strong> is seafood or vegetables that have been covered in batter and fried in oil. We eat tempura with by dipping into tempura sauce or with maccha salt.</p>
-				<img src="./images/food_tempra.jpg" alt='Tempra'>
-			</ol>	
+				    <li>TEMPRA</li>
+				    <p><strong>Tempura</strong> is seafood or vegetables that have been covered in batter and fried in oil. We eat tempura with by dipping into tempura sauce or with maccha salt.</p>
+				    <span><img src="./images/food_tempra.jpg" alt='Tempra'></span>
+			    </ol>	
 			
-		</article>
-		<article>
-			<h2 id="hotel">Hotel</h2>
-			<ol>
-				<a href="https://www.thetokyostationhotel.jp/en" title="official web-site" target="_blank">
-					<li>TOKYO STATION HOTEL</li>
-				</a>
-				<p><strong>Tokyo Station Hotel</strong> is directly connected to the JR Tokyo Station Marunouchi, for convenient travel throughout Japan. The hotel is also located just 30 minutes from the Haneda Airport Station by Tokyo Monorail; and 60 minutes from the JR Narita Airport Station by Narita Express.</p>
-				<img src="./images/hotel_station.jpg" alt="TOKYO STATION HOTEL">
+		    </article>
+		    <article>
+		    	<div id="hotel" class="dummy"></div>
+			    <h2>Hotel</h2>
+			    <ol>
+				    <li><a href="https://www.thetokyostationhotel.jp/en" title="official web-site" target="_blank">TOKYO STATION HOTEL</a></li>
+				    <p><strong>Tokyo Station Hotel</strong> is directly connected to the JR Tokyo Station Marunouchi, for convenient travel throughout Japan. The hotel is also located just 30 minutes from the Haneda Airport Station by Tokyo Monorail; and 60 minutes from the JR Narita Airport Station by Narita Express.</p>
+				    <span><img src="./images/hotel_station.jpg" alt="TOKYO STATION HOTEL"></span>
 
-				<a href="https://hoshinoya.com/tokyo/en/" title="official web-site" target="_blank">
-					<li>HOSHINOYA HOTEL</li>
-				</a>
-				<p>Extreme attention to details, from design to service, this is a great choice for someone looking to relax and for some visual and sensorial inspiration. Also, greatly designed onsen (part of it is open-air) located on the 17th floor. <strong>Hoshinoya hotel</strong> is great choice!</p>
-				<img src="./images/hotel_hoshinoya.jpg" alt="HOSHINOYA HOTEL">
+				    <li><a href="https://hoshinoya.com/tokyo/en/" title="official web-site" target="_blank">HOSHINOYA HOTEL</a></li>
+				    <p>Extreme attention to details, from design to service, this is a great choice for someone looking to relax and for some visual and sensorial inspiration. Also, greatly designed onsen (part of it is open-air) located on the 17th floor. <strong>Hoshinoya hotel</strong> is great choice!</p>
+				    <span><img src="./images/hotel_hoshinoya.jpg" alt="HOSHINOYA HOTEL"></span>
 
-				<a href="https://www.imperialhotel.co.jp/e/tokyo/" title="official web-site" target="_blank">
-					<li>IMPERIAL HOTEL</li>
-				</a>
-				<p><strong>Imperial Hotel</strong> is founded in 1890, has welcomed celebrities by offering impeccable Japanese hospitality. </p>
-				<img src="./images/hotel_imperial.jpg" alt="IMPERIAL HOTEL">
-			</ol>
-		</article>
-	</main>
+				    <li><a href="https://www.imperialhotel.co.jp/e/tokyo/" title="official web-site" target="_blank">IMPERIAL HOTEL</a></li>
+				    <p><strong>Imperial Hotel</strong> is founded in 1890, has welcomed celebrities by offering impeccable Japanese hospitality. </p>
+				    <span><img src="./images/hotel_imperial.jpg" alt="IMPERIAL HOTEL"></span>
+			    </ol>
+		    </article>
+	    </main>
 
-	<footer>
-		<p><small>Copyright&copy; 2018 @Chieko Yamamoto All Rights Reserved.</small></p>
-	</footer>
+	    <footer>
+		    <p><small>Copyright&copy; 2018 @Chieko Yamamoto All Rights Reserved.</small></p>
+	    </footer>
+	</div>
 </body>
 </html>
