Correction of errors

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	    </main>
 
 	    <footer>
-		    <p><small>Copyright&copy; 2018 @Chieko Yamamoto All Rights Reserved.</small></p>
+		    <p><small>Copyright&copy; 2018 Chieko Yamamoto All Rights Reserved.</small></p>
 	    </footer>
 	</div>
 </body>
